--- a/index.html
+++ b/index.html
@@ -30,7 +30,12 @@
             <span class="name">{{product.name}}</span>
             <span class="price">{{product.price}}</span>
             <div class="quantity-area" v-if="product.active">
-              <button @click.stop="product.quantity--" :disabled="product.quantity <= 1">-</button>
+              <button
+                @click.stop="product.quantity--"
+                :disabled="product.quantity <= 1"
+              >
+                -
+              </button>
               <span class="quantity">{{product.quantity}}</span>
               <button @click.stop="product.quantity++">+</button>
             </div>
@@ -51,16 +56,22 @@
             <tr v-for="product in products">
               <template v-if="product.active">
                 <td>{{ product.quantity + 'x ' + product.name}}</td>
-                <td>{{ (product.quantity  * product.price).toFixed(2)}}</td>
+                <td>{{ (product.quantity * product.price).toFixed(2)}}</td>
               </template>
             </tr>
 
             <tr>
               <th>Total</th>
-              <th> {{ total() }} </th>
+              <th>{{ total() }}</th>
             </tr>
           </tbody>
         </table>
+        <button
+          class="button-limpar"
+          @click="products.forEach(p =>{ p.active = false, p.quantity = 1})"
+        >
+          Limpar
+        </button>
       </section>
     </main>
     <script src="https://unpkg.com/vue@next"></script>
